Small FAQ updates

--- a/pol/faq.html
+++ b/pol/faq.html
@@ -31,11 +31,26 @@
 <div class="mainPage">
 <div class="mainContent">
 
-<p>This page will contain information answers to common questions such as:</p>
+<h2>Frequently Asked Questions</h2>
 <ul>
-    <li><strong>What is the quiz retry grading scheme?</strong></li>
-    <li><strong>Why do we have to take exams on the computer?</strong></li>
-    <li><strong>Discussions are nothing like homework and quizzes, why do we do them?</strong></li>
+	<li><strong>What is the quiz retry grading scheme?</strong>
+		<p></p>
+	</li>
+	<li><strong>Why do we have to take exams on a computer?</strong>
+		<p></p>
+	</li>
+	<li><strong>Why are there no paper quizzes? CBTF is <em>not</em> fair, one typo can destroy my grade!</strong>
+		<p></p>
+	</li>
+	<li><strong>Discussions are nothing like homework and quizzes, why do we do them?</strong>
+		<p></p>
+	</li>
+	<li><strong>I submitted the form 2 days ago, why hasn't my excused absence been processed?</strong>
+		<p>Excused absences will not show up in compass until after the due date of assignment, discussion, etc. has passed</p>
+	</li>
+	<li><strong>I haven't heard anything about my excused absence and it isn't showing up on Compass, is it approved?</strong> 
+		<p>If you don't get a response about your excused absence then you can assume it is approved.</p>
+	</li>
 </ul>
 
 </div>
