First draft of SIIP page with wording
Will modify to reflect wording of published papers at the top of the page.

--- a/pol/siip.html
+++ b/pol/siip.html
@@ -33,19 +33,57 @@
 <div class="mainContent">
 
 <p>This page will contain information about how we work to improve the TAM 2XX courses.</p>
+<p><a target="_blank" href="EsWeEtAl2016.pdf">Ref 1</a>, <a target="_blank" href="SaWeHe2016.pdf">Ref 2</a>, <a target="_blank" href="WeSiHe2015b.pdf">Ref 3</a></p>
 
 
-<p align="center">  <img src="studentLearningOutcomes.PNG" width="750px"></img></p>
-<p align="center">  <img src="assessmentOfLearning.PNG" width="750px"></img></p>
+<p>The TAM 2XX courses have been reformed in three primary areas:</p>
+<ol>
+	<li>Active Learning
+		<ul>
+			<li>In Lecture</li>
+			<li>Introduction of Discussion Sections</li>
+		</ul>
+	</li>
+	<li>Assessments
+		<ul>
+			<li>Online homeworks</li>
+			<li>Computer-Based Quizzes replacing in-lecture exams</li>
+		</ul>
+	</li>
+	<li>Online Resources
+		<ul>
+			<li>24x7 Help Forum</li>
+			<li>Free online reference text</li>
+		</ul>
+	</li>
+</ol>
+<p>The data shows these reforms have had an overall positive impact on student learning:</p>
+<p align="center">
+	<img src="studentLearningOutcomes.PNG" width="450px"></img>
+	<img src="assessmentOfLearning.PNG" width="450px"></img>
+</p>
+
+<h3>1. Active Learning</h3>
+<p>There is a lot of evidence that active and collaborative learning improves education. </p>
 <p align="center">  <img src="activeAndCollabLearning.PNG" width="750px"></img></p>
-<p align="center">  <img src="blendedLearning.PNG" width="750px"></img></p>
-<p align="center">  <img src="referencePage.PNG" width="750px"></img></p>
+
+<p>Discussions sections were introduced into the TAM 2XX courses to add more opportunities for active learning. I-clickers were added to lecture for the same reason.</p>
+
+<h3>2. Assessments</h3>
+<p>Pre-reform, these courses typically included weekly homework assignments, three in-lecture exams, and a final exam. The reform began with pre-existing online resources provided by publishers. However, to improve instructor freedom and the student experience, a free, online homework and testing system was developed. This system, PrairieLearn, is free and open source. It is under constant development to add tools for instructors, improve the grading system, and improve the student interface.</p>
 <p align="center">  <img src="onlineHomework.PNG" width="750px"></img></p>
+
+<p>PrairieLearn also paved the way for computer-based testing. Evidence shows that long term retention depends on regular review of the course material. To encourage regular review, the three typical midterm exams were broken into six bi-weekly quizzes. </p>
 <p align="center">  <img src="quizRetries.PNG" width="750px"></img></p>
 
+<h3>3. Online Resources</h3>
+<p>Instead of requiring expensive textbooks. Free online reference pages were created for students. These are available at anytime to anyone. A 24x7 online help forum was also introduced to provide students with access to the instructors and student assistants outside of designated office hours.</p>
+<p align="center">  <img src="referencePage.PNG" width="750px"></img></p>
+<p align="center">  <img src="onlineHomework.PNG" width="750px"></img></p>
 
 
-<p><a href="EsWeEtAl2016.pdf">Ref 1</a>, <a href="SaWeHe2016.pdf">Ref 2</a>, <a href="WeSiHe2015b.pdf">Ref 3</a></p>
+<p>Together, these reforms create "blended learning". Increasing student-teacher interaction time, active learning, and improving overall student performance.</p>
+<p align="center">  <img src="blendedLearning.PNG" width="750px"></img></p>
 
 
 </div>
