Sp21 quiz drop update

--- a/pol/onlinepolicies.html
+++ b/pol/onlinepolicies.html
@@ -307,10 +307,11 @@
 
 					<p>&nbsp;</p>
 
-					<h3><a id="CBTF" name=""><strong>Computer-Based Testing Facility Online:</strong></a></h3>
+					<h3><a id="Quizzes and exams" name="Quizzes and exams"><strong>Quizzes and exams:</strong></a></h3>
 
-					<p>You will have online quizzes using the PrairieLearn system. This course uses the Grainger 
-						College of Engineering Computer-Based Testing Facility (CBTF) Online for proctoring: 
+					<p>You will have online quizzes and exams using the PrairieLearn system. 
+						Your lowest quiz grade for the semester will be dropped. All quizzes and exams will be proctored by
+						the Grainger College of Engineering Computer-Based Testing Facility (CBTF) Online: 
 						<a href="https://cbtf.engr.illinois.edu/cbtf-online">https://cbtf.engr.illinois.edu/cbtf-online</a>.</p>
 
 					<p>The policies of CBTF Online are the policies of this course, and academic integrity infractions
