Updated dyn reference pages
Added rotations about fixed origins, curvature of an explicitly defined function

--- a/dyn/rkt.html
+++ b/dyn/rkt.html
@@ -826,6 +826,34 @@
             </p>
           </div>
         </div>
+        <a>
+          We can take this a step further, and obtain an expression for an explicitly defined function.
+        </a>
+        <div class="envContainer equation" id="rkt-e3">
+          <p class="envHeader">
+            Curvature of an explicitly defined function $y = f(x).$
+          </p>
+          <div class="envBody">
+            <p>
+              \[\kappa = \frac{|y''(x)|}{(1 + y'(x)^2)^{3/2}}\]
+            </p>
+          </div>
+        </div>
+        <div class="envContainer derivation">
+          <div class="envBody">
+            <p>
+              Use equation <a
+              href="rkt.html#rkt-e2">#rkt‑e2</a> and parametrize the curve using $x$ as the parametrization variable. Namely:
+
+              \[\begin{aligned}
+              x = u, \quad \quad y = y(u) = y(x)
+              \end{aligned}\]
+
+              This yields a very elegant expression, as $x'(u) = 1$ and $x''(u) = 0$, which lets us arrive at the desired expression <a
+              href="rkt.html#rkt-e3">#rkt‑e3</a>.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
     </div>
