--- a/dyn/rkv.html
+++ b/dyn/rkv.html
@@ -296,6 +296,47 @@
       </div>
     </div>
     <div class="contentBlock">
+      <div id="rkv-so" class="contentCol">
+        <h2>
+          Rotation about a fixed origin
+        </h2>
+        <p>
+          If an object is rotating with angular velocity $\omega$ about a fixed origin, then the velocity and acceleration are given by the following relations:
+        </p>
+        <div class="envContainer equation" id="rkv-ef">
+          <p class="envHeader">
+            Velocity and acceleration about a fixed origin.
+          </p>
+          <div class="envBody">
+            <p>
+              \[\begin{aligned}
+              \vec{v} &amp;= \vec{\omega} \times \vec{r} \\
+              \vec{a} &amp;= \vec{\alpha} \times \vec{r} + \vec{\omega} \times (\vec{\omega} \times \vec{r}) \\
+              \end{aligned}\]
+            </p>
+          </div>
+        </div>
+        <div class="envContainer derivation">
+          <div class="envBody">
+            <p>
+              Establishing some mathematical intuition first, the cross product yields a counterclockwise orthogonal vector to the two vectors that we are crossing. 
+	      This result also yields a vector tangent to the direction of travel. Knowing that, and knowing that velocity is always tangent to the direction of travel,
+	      as well as orthogonal to position, we can arrive at the relationship $\vec{v} = \vec{\omega} \times \vec{r}$. Acceleration can be obtained by differentiating
+	      velocity with respect to time:
+	      \[\begin{aligned}
+              \vec{a} &amp;= \frac{d\vec{v}}{dt} \\
+	      &amp;= \frac{d}{dt}(\vec{\omega}) \times \vec{r} + \vec{\omega} \times \frac{d}{dt}(\vec{r})\\
+	      &amp;= \vec{\alpha} \times \vec{r} + \vec{\omega} \times \vec{v}\\	
+	      &amp;= \vec{\alpha} \times \vec{r} + \vec{\omega} \times (\vec{\omega} \times \vec{r})\\
+	      \end{aligned}\]
+		  
+		  Another perhaps more intuitive approach to this is observing that the origin is what is called the <em> instantaneous center </em>. More on that derivation at <a href="rkg.html#rkg-ev">#rkg-ev.</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="contentBlock">
       <div id="rkv-sl" class="contentCol">
         <h2>
           Velocity and acceleration in polar basis
