--- a/dyn/rko.html
+++ b/dyn/rko.html
@@ -204,7 +204,7 @@
         </p>
         <div class="envContainer equation" id="rko-ef">
           <p class="envHeader">Center velocity and acceleration while
-          rolling on a flat surface.</p>
+          rolling on a flat surface (Tangential-Normal Basis).</p>
           <div class="envBody">
             <p>
               \[\begin{aligned}
@@ -239,6 +239,40 @@
               \vec{v}_C &amp;= r \omega \,\hat{e}_t \\
               \dot{\vec{v}}_C &amp;= r \dot\omega \,\hat{e}_t \\
               \vec{a}_C &amp;= r \alpha \,\hat{e}_t.
+              \end{aligned}\]
+            </p>
+          </div>
+        </div>
+        <div class="envContainer equation" id="rko-ef">
+          <p class="envHeader">Center velocity and acceleration while
+          rolling on a flat surface (Standard Basis). </p>
+          <div class="envBody">
+            <p>
+              \[\begin{aligned}
+              \vec{v}_C &amp;= -r \omega \,\hat\imath \\
+              \vec{a}_C &amp;= -r \alpha \,\hat\imath
+              \end{aligned}\]
+            </p>
+          </div>
+        </div>
+        <div class="envContainer derivation">
+          <div class="envBody">
+            <p>
+              Since the body is rolling without slipping, the contact point $A$'s
+              velocity is instantaneously zero. Using rigid body equations:
+
+              \[\begin{aligned}
+              \vec{v}_C &amp;= \vec{v}_A + \vec{\omega} \times \vec{r}_{AC} \\
+              &amp;= \omega r_{AC}^\perp \\
+              &amp;= -r \omega \,\hat\imath.
+              \end{aligned}\]
+
+              Differentiating to obtain acceleration results in:
+
+              \[\begin{aligned}
+              \vec{v}_C &amp;= -r \omega \,\hat\imath \\
+              \dot{\vec{v}}_C &amp;= -r \dot\omega \,\hat\imath \\
+              \vec{a}_C &amp;= -r \alpha \,\hat\imath.
               \end{aligned}\]
             </p>
           </div>
@@ -398,7 +432,7 @@
         </p>
         <div class="envContainer equation" id="rko-ec">
           <p class="envHeader">Center velocity and acceleration while
-          rolling on a curved surface.</p>
+          rolling on a curved surface (Tangential-Normal Basis).</p>
           <div class="envBody">
             <p>
               \[\begin{aligned}
@@ -492,6 +526,39 @@
               href="#rko-eg">#rko-eg</a>. The final expressions in <a
               href="#rko-ec">#rko-ec</a> apply to rolling on both the
               inside and outside.
+            </p>
+          </div>
+        </div>
+        <div class="envContainer equation" id="rko-ec">
+          <p class="envHeader">Center velocity and acceleration while
+          rolling on a curved surface (I-J Basis).</p>
+          <div class="envBody">
+            <p>
+              $\text{Rolling on the inside}:$
+              \[\begin{aligned}
+              \vec{v}_C &amp;= -r \omega \,\hat{I}\\
+              \vec{a}_C &amp;= -r \alpha \,\hat{I}
+              + \frac{(r\omega)^2}{R} \,\hat{J}
+              \end{aligned}\]
+              
+              $\text{Rolling on the outside}:$
+              \[\begin{aligned}
+              \vec{v}_C &amp;= -r \omega \,\hat{I}\\
+              \vec{a}_C &amp;= -r \alpha \,\hat{I}
+              - \frac{(r\omega)^2}{R} \,\hat{J}
+              \end{aligned}\]
+            </p>
+          </div>
+        </div>
+        <div class="envContainer derivation">
+          <div class="envBody">
+            <p>
+              By defining positive $\hat{J}$ as always pointing towards the center of the
+              body rolling, i.e $\hat{J} = -\hat{e}_n$ for rolling on the outside,
+              and $\hat{J} = \hat{e}_n$ for rolling on the inside, 
+              and $\hat{I}$ to make a right-handed 
+              set (i.e $\hat{I} \times \hat{J} = \hat{k}$)
+              we can obtain the expressions above. 
             </p>
           </div>
         </div>
