--- a/pol/pltips.html
+++ b/pol/pltips.html
@@ -43,40 +43,19 @@
 							<li><strong>No Fractions:</strong> Do not use fractions as your input answer. Instead use
 								decimal numbers (e.g. <font face="courier new">2/3</font> is not accepted as a correct
 								answer, however <font face="courier new">0.667</font> is).</li>
-							<li><strong>Don't copy negative numbers:</strong> The Linux MATE calculator app uses a
-								non-standard character for the minus sign that PrairieLearn does not recognize. Copying
-								directly from the calculator to PrairieLearn will cause your answer to be graded as
-								incorrect, even if it looks correct to you. To avoid this, do not copy negative numbers
-								from the calculator app. This problem does not affect MATLAB or Mathematica, and you can
-								copy from these programs without issue.</li>
 							<li><strong>Error tolerance is 1%:</strong> Your answer must be accurate to within a
 								relative tolerance of 0.01.
 								<ul>
 									<li>
-										<p><strong>MATLAB Note:</strong> By default, MATLAB displays five digits of any
-											stored variable -- NOT five significant digits (this is &quot;<font
-												face="courier new">format short</font>&quot;). If that variable is a
-											small number (as strain values commonly are), this can lead to fewer than
-											three significant digits being displayed.</p>
-
 										<p>For example, you may (correctly) compute a strain value of <font
 												face="courier new">x = 1.17*10^(-3)</font> using symbolic expressions.
-											If you ask MATLAB to print <font face="courier new">x</font>, it will return
-											<font face="courier new">x = 0.0012</font> (exactly five digits, and two
-											significant digits). However, PrairieLearn will mark the answer <font
+											If you enter your answer as <font face="courier new">x = 0.0012</font> 
+											(exactly five digits, and two
+											significant digits), PrairieLearn will mark the answer <font
 												face="courier new">0.0012</font> incorrect, as the difference between
 											these two values is about 2.5% (that is, <font face="courier new">
 												(1.2-1.17)/1.17 = 0.0256)</font> and exceeds PL&#39;s tolerance for
 											correct answers.</p>
-
-										<p>Note that MATLAB has not rounded the actual stored value; only the displayed
-											value. You can ask MATLAB to always print the full stored value by entering
-											the command &quot;<strong>
-												<font face="courier new">format long</font>
-											</strong>&quot; before computing. MATLAB will then print <font
-												face="courier new">0.00117</font>, to full precision. Be careful, as
-											this setting reverts to &quot;<font face="courier new">format short</font>
-											&quot; when you close Matlab!</p>
 									</li>
 								</ul>
 							</li>
@@ -134,7 +113,7 @@
 						<p>Doing the homework, it’s important to make sure that you fully understand as completely as
 							possible the solution you reach for each question. When reviewing your homework problems,
 							you should make sure that you can do the problem on paper, type it into your calculator of
-							choice (MATLAB, Mathematica, Python, etc.), and get the correct answer on the first try.
+							choice, and get the correct answer on the first try.
 							It’s easy to overlook some key concepts in the course by “brute forcing” signs and units in
 							the homework (see above). If you find you are consistently getting answers off by factors of
 							10, or making a sign error, it can be easy to correct and overlook while doing the homework,
@@ -146,12 +125,8 @@
 							information? What information was absolutely necessary to solve the problem? Do you
 							understand why you were able to make all of the assumptions you did?</p>
 
-						<p>Using a script is strongly recommended as is can help you keep track of your work. For
-							MATLAB, there is an example in this introductory document: <a
-								href="https://courses.engr.illinois.edu/tam251/sp2019/references/MATLAB%20Introduction.pdf"
-								target="_blank">Matlab Introduction.</a></p>
+						<p>Using a Python script is strongly recommended as is can help you keep track of your work.
 
-						<h3>These reference pages are available during CBTF Quizzes.</h3>
 					</div>
 
 					<div class="contentBlock">
@@ -159,14 +134,11 @@
 						<p>If you are not familiar with taking computer based tests at UIUC, we strongly recommend
 							watching this <a href="https://www.youtube.com/watch?v=eGW-NmpsUo0"
 								target="_blank">video</a> as well as reviewing the <a
-								href="https://cbtf.engr.illinois.edu/for-students/policies.html"
+								href="https://ae3.engineering.illinois.edu/grainger-exam-services/cbtf/students/policies/"
 								target="_blank">policies and procedures</a> on their website.</p>
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/eGW-NmpsUo0" frameborder="0"
 							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 							allowfullscreen></iframe>
-						<p>If you are not familiar with the Linux OS, you can log-in to a virtual machine using your
-							NetID and password to login at the following URL: <a href="https://fastx.ews.illinois.edu"
-								target="_blank">https://fastx.ews.illinois.edu</a></p>
 
 						<h3>Important CBTF Policies:</h3>
 						<ul>
@@ -175,18 +147,15 @@
 								judgement.</li>
 							<li>If you missed an exam for whatever reason, you can go see a proctor at the CBTF in
 								person. They will help you sign up for another exam.</li>
+							<li>For more information, check out the <a
+								href="https://ae3.engineering.illinois.edu/grainger-exam-services/cbtf/students/faq/"
+								target="_blank">FAQ</a> page.</li>
 						</ul>
 
 						<h3>Computation at CBTF:</h3>
 						<ul>
-							<li>Personal calculators are not allowed in the CBTF. You can use <a
-									href="https://cbtf.engr.illinois.edu/for-students/calculator.html"
-									target="_blank">calculator</a> supplied by the CBTF, or the <a
-									href="https://cbtf.engr.illinois.edu/for-students/software-calc.html"
-									target="_blank">MATE Calculator</a> installed on the computer.</li>
-							<li>Common computational tools available on CBTF computers are MATLAB, Mathematica, and
-								Python. We encourage you to learn one of these languages as they will be useful in
-								future courses.</li>
+							<li>Personal calculators are not allowed in the CBTF. You can use calculators
+								supplied by the CBTF, or Python that is available within PrairieLearn.</li>
 							<li>Degrees vs. Radians: Make sure that you know how the computational tool you are using
 								calculates cos and sin. If you want to check this, you can calculate a quantity like
 								<strong>
@@ -195,14 +164,7 @@
 									<font face="courier new">0</font>
 								</strong>.</li>
 						</ul>
-
-						<p>If you have any questions about CBTF Policies and Procedures, please refer to the <a
-								href="https://cbtf.engr.illinois.edu/for-students/faq.html" targer="_blank">FAQ</a>. If
-							this does not answer your question, post to Piazza.</p>
 					</div>
-
-
-
 				</div>
 			</div>
 		</div>
