Remove Compass2g and Piazza

--- a/pol/policies.html
+++ b/pol/policies.html
@@ -42,7 +42,7 @@
 					<!-- <p><a href="#Academic integrity">Academic integrity, harassment, and discrimination</a><br />
 						<a href="#CBTF">Computer-Based Testing Facility</a><br />
 						<a href="#Contact">Contact and obtaining help</a><br />
-						&nbsp;<a href="#Piazza">Piazza</a><br />
+						&nbsp;<a href="#Campuswire">Campuswire</a><br />
 						<a href="#Gradebook">Gradebook</a><br />
 						<a href="#FinalGrades">Final Grading</a><br />
 						<a href="#Lectures">Lectures</a><br />
@@ -155,34 +155,34 @@
 
 					<h3><a id="Contact" name="Contact"><strong>Contact and obtaining help:</strong></a></h3>
 
-					<p>The two main ways to obtain help are online at Piazza, or in person at the Grainger office hours.
+					<p>The two main ways to obtain help are online at Campuswire, or in person at the Grainger office hours.
 						You can also speak with your professor briefly after lecture. Please do not send email directly
 						to CAs, TAs or professors for routine help or absences. &nbsp;</p>
 
-					<p><strong><a id="Piazza" name="Piazza">Online forum (Piazza)</a>:</strong></p>
+					<p><strong><a id="Campuswire" name="Campuswire">Online forum (Campuswire)</a>:</strong></p>
 
-					<p>This class uses <a href="https://piazza.com/illinois">Piazza</a> for ALL
+					<p>This class uses <a href="https://campuswire.com/">Campuswire</a> for ALL
 						communications between the instructor, TAs, CAs, and students. Students should not communicate
 						with instructors via email. This is so we can ensure a faster response and keep everyone
 						informed about what&#39;s going on.</p>
 
-					<p>Students are encouraged to post public messages on Piazza (&quot;Post to Entire Class&quot;). If
+					<p>Students are encouraged to post public messages on Campuswire (&quot;Post to Entire Class&quot;). If
 						you like, you can post anonymously, but we encourage everyone to use their name because it makes
 						a friendlier and more welcoming environment. We will never judge anyone for asking anything on
-						Piazza, and you will see professors, TAs, and CAs making mistakes and saying stupid things as
+						Campuswire, and you will see professors, TAs, and CAs making mistakes and saying stupid things as
 						well!</p>
 
-					<p>You can use the private feature on Piazza by posting a message visible only to the Instructors.
+					<p>You can use the private feature on Campuswire by posting a message visible only to the Instructors.
 						In this, you must type &quot;Instructors&quot;, instead of sending a message to a specific TA or
 						instructor. Again, this helps to ensure that you get a prompt response.</p>
 
 
 					<h3><strong><a id="Gradebook" name="Gradebook">Gradebook</a>:</strong></h3>
 
-					<p>All assessment scores are stored on Compass2g. Note that we are only using this website for grade
+					<p>All assessment scores are stored on Canvas. Note that we are only using this website for grade
 						reporting. All other class-related information will be posted only to the official class website
-						or Piazza. Any errors in grade reporting appearing on Compass2g must be reported to
-						&quot;Instructors&quot; via Piazza within 2 weeks of the due date of the assessment item or by
+						or Campuswire. Any errors in grade reporting appearing on Canvas must be reported to
+						&quot;Instructors&quot; via Campuswire within 2 weeks of the due date of the assessment item or by
 						the last day of class, whichever is earlier.</p>
 
 					<h3>
@@ -253,10 +253,9 @@
 					<h3><strong><a id="iClickers" name="iClickers">iClickers</a>:</strong></h3>
 
 					<p>Short quizzes are conducted during lectures using iClickers.
-						An iClicker remote can be purchased from any of the bookstores, and must be registered on
-						Compass, under the tab &quot;Register i&gt;clicker&quot;. <strong>You need to register your
-							iClicker by the end of Week 3, when the iClicker roster will be synced for the last
-							time.</strong> 
+						You can use either a physical remote or the iClicker app. An iClicker remote can be purchased 
+						from any of the bookstores. You must sign up for an iClicker.com account, and register for
+						the class you are enrolled in by searching for it once you are logged in.
 						Your lowest six scores will be dropped. These drops should be reserved for unexpected
 						occurrences such as sickness or a family emergency.</p>
 
@@ -382,7 +381,7 @@
 						communicate with the professor to organize the exam. There is no need to inform the professor
 						about this in advance.</p>
 
-					<p>The use of Piazza should not replace the in-person Office Hours time, since some questions cannot
+					<p>The use of Campuswire should not replace the in-person Office Hours time, since some questions cannot
 						be fully addressed via an online forum.</p>
 
 					<h3><strong><a id="FinalExam" name="FinalExam">Final Exam</a>:</strong></h3>
