Fa21 Online Policy Updates

--- a/pol/onlinepolicies.html
+++ b/pol/onlinepolicies.html
@@ -118,24 +118,24 @@
 
 					<h3><a id="Contact" name="Contact"><strong>Contact and obtaining help:</strong></a></h3>
 
-					<p>The main way to obtain help is online via Piazza.
+					<p>The main way to obtain help is online via Campuswire.
 						Please do not send email directly
 						to CAs, TAs or professors for routine help or absences. &nbsp;</p>
 
-					<p><strong><a id="Piazza" name="Piazza">Online forum (Piazza)</a>:</strong></p>
+					<p><strong><a id="Campuswire" name="Campuswire">Online forum (Campuswire)</a>:</strong></p>
 
-					<p>This class uses <a href="https://piazza.com/illinois">Piazza</a> for ALL
+					<p>This class uses <a href="https://campuswire.com/">Campuswire</a> for ALL
 						communications between the instructor, TAs, CAs, and students. Students should not communicate
 						with instructors via email. This is so we can ensure a faster response and keep everyone
 						informed about what&#39;s going on.</p>
 
-					<p>Students are encouraged to post public messages on Piazza (&quot;Post to Entire Class&quot;). If
+					<p>Students are encouraged to post public messages on Campuswire (&quot;Post to Entire Class&quot;). If
 						you like, you can post anonymously, but we encourage everyone to use their name because it makes
 						a friendlier and more welcoming environment. We will never judge anyone for asking anything on
-						Piazza, and you will see professors, TAs, and CAs making mistakes and saying stupid things as
+						Campuswire, and you will see professors, TAs, and CAs making mistakes and saying stupid things as
 						well!</p>
 
-					<p>You can use the private feature on Piazza by posting a message visible only to the Instructors.
+					<p>You can use the private feature on Campuswire by posting a message visible only to the Instructors.
 						In this, you must type &quot;Instructors&quot;, instead of sending a message to a specific TA or
 						instructor. Again, this helps to ensure that you get a prompt response.</p>
 
@@ -143,10 +143,10 @@
 
 					<h3><strong><a id="Gradebook" name="Gradebook">Gradebook</a>:</strong></h3>
 
-					<p>All assessment scores are stored on Compass2g. Note that we are only using this website for grade
+					<p>All assessment scores are stored on Canvas. Note that we are only using this website for grade
 						reporting. All other class-related information will be posted only to the official class website
-						or Piazza. Any errors in grade reporting appearing on Compass2g must be reported to
-						&quot;Instructors&quot; via Piazza within 2 weeks of the due date of the assessment item or by
+						or Campuswire. Any errors in grade reporting appearing on Canvas must be reported to
+						&quot;Instructors&quot; via Campuswire within 2 weeks of the due date of the assessment item or by
 						the last day of class, whichever is earlier.</p>
 
 					<h3>
@@ -212,30 +212,35 @@
 
 					<h3><a id="Lectures" name="Lectures"><strong>Lectures:</strong></a></h3>
 
-					<p>Prompt and regular attendance at synchronous lectures and watching pre-recorded lectures 
+					<p>Watching pre-recorded lectures in a timely manner
 					is essential for your comprehension and success in the course.</p>
 
+<!--
 					<h3><strong><a id="Polls" name="Polls">Lecture Polls</a>:</strong></h3>
 
 					<p>Short quizzes are conducted during synchronous lectures using polls.
 						Your lowest six scores will be dropped. These drops should be reserved for unexpected
 						occurrences such as sickness or a family emergency.</p>
-
+-->
 					<p>&nbsp;</p>
 
 					<h3><strong><a id="Discussion" name="Discussion">Discussion sections</a>:</strong></h3>
-
+<!--
 					<p>Discussion sections start in Week 1 of semester. Prompt and regular
 						attendance at your online discussion section is required. You <strong>must</strong> attend only the
 						discussion section in which you are enrolled. You will not receive a grade for the worksheet if
 						you attend the wrong discussion section.</p>
-
-					<p>Most discussion sessions will consist of a group worksheet exercise, which is a high-energy and
-						efficient 50-minute learning experience. Students will be placed in permanent groups of three to
+-->
+					<p>Discussion sessions will consist of a worksheet exercise, which is a high-energy and
+						efficient learning experience. Completed discussion worksheet need to be submitted by the 
+						end of the week that it is assigned to receive credit.</p>
+<!--
+						Students will be placed in permanent groups of three to
 						four people during the third week of classes. <strong>If you are more than 5 minutes late to a
 							discussion session then you will not receive credit for the section.</strong> All members of
 						the group should be working together as a team. The TAs and CAs will be evaluating team work,
-						problem-solution skills and interpretation of the problem.</p>
+						problem-solution skills and interpretation of the problem.
+						</p>
 
 					<p>There are two main goals for the discussion worksheets:</p>
 
@@ -257,7 +262,8 @@
 					<p>We also hope that these discussion worksheets will help you to meet other engineering students
 						and we encourage you to get together outside of lectures and discussions to work collaboratively
 						on homeworks and exam study.</p>
-
+-->
+						
 					<p>&nbsp;</p>
 
 					<h3><strong><a id="Homework" name="Homework">Online homeworks</a>:</strong></h3>
