--- a/pol/policies.html
+++ b/pol/policies.html
@@ -155,7 +155,7 @@
 
 					<h3><a id="Contact" name="Contact"><strong>Contact and obtaining help:</strong></a></h3>
 
-					<p>The two main ways to obtain help are online at Campuswire, or in person at the Grainger office hours.
+					<p>The two main ways to obtain help are online at Campuswire, or in person at office hours.
 						You can also speak with your professor briefly after lecture. Please do not send email directly
 						to CAs, TAs or professors for routine help or absences. &nbsp;</p>
 
@@ -173,8 +173,8 @@
 						well!</p>
 
 					<p>You can use the private feature on Campuswire by posting a message visible only to the Instructors.
-						In this, you must type &quot;Instructors&quot;, instead of sending a message to a specific TA or
-						instructor. Again, this helps to ensure that you get a prompt response.</p>
+						To do so, choose the &quot;Post to instructors and TAs&quot; option in the dropdown menu located at 
+						the bottom right corner of the window.</p>
 
 
 					<h3><strong><a id="Gradebook" name="Gradebook">Gradebook</a>:</strong></h3>
@@ -255,9 +255,13 @@
 					<p>Short quizzes are conducted during lectures using iClickers.
 						You can use either a physical remote or the iClicker app. An iClicker remote can be purchased 
 						from any of the bookstores. You must sign up for an iClicker.com account, and register for
-						the class you are enrolled in by searching for it once you are logged in.
-						Your lowest six scores will be dropped. These drops should be reserved for unexpected
-						occurrences such as sickness or a family emergency.</p>
+						the class you are enrolled in by searching for it once you are logged in.</p>
+					<p>iClicker participation grade is worth 5% of final course grade if it is higher than your combined
+						quiz + final exam grade, replacing the corresponding portion of quiz + final exam grade. 
+						Otherwise, your iClicker grade will not count toward your final course grade.						
+						Your lowest six iClicker scores for the semester will be dropped automatically. These drops 
+						should be reserved for unexpected occurrences such as sickness or a family emergency. 
+						No missed iClicker scores will be excused for the semester regardless of the reasons.</p>
 
 					<h3><strong><a id="Quiz" name="Quiz"></a></strong><strong>Computer-based quizzes:</strong></h3>
 
@@ -266,9 +270,9 @@
 						phones. Solutions will not be posted. All quizzes will be held in the Computer-Based Testing
 						Facility (CBTF). Make sure to check the <a href="https://cbtf.engr.illinois.edu/"> CBTF</a>
 						website to get information about the facility and what you need to do to sign-up for your quiz.
-						Each quiz grade is determined from the following formula: <strong>max([First Try, 1/3*(First
-							Try) + 2/3*(Quiz Retry)]).</strong></p>
-
+						Each quiz grade is determined from the following formula:</p>
+						<p>TAM 210/211/251: <strong>max([First Try, 1/3*(First Try) + 2/3*(Quiz Retry)]).</strong></p>
+						<p>TAM 212: <strong>0.8*max(First Try, Quiz Retry) + 0.2*min(First Try, Quiz Retry).</strong></p>
 					<p>If you have an excused absence for the quiz, then you will take the assessment at a later date,
 						or make other arrangements at the discretion of the instructor.</p>
 
@@ -290,7 +294,7 @@
 
 					<h3><strong><a id="Discussion" name="Discussion">Discussion sections</a>:</strong></h3>
 
-					<p>Discussion sections start in Week 1 of semester. Prompt and regular
+					<p>Discussion sections start in Week 2 of semester. Prompt and regular
 						attendance at your discussion section is required. You <strong>must</strong> attend only the
 						discussion section in which you are enrolled. You will not receive a grade for the worksheet if
 						you attend the wrong discussion section.</p>
