--- a/pol/policies-Sp2022.html
+++ b/pol/policies-Sp2022.html
@@ -20,7 +20,7 @@
 		});
 	</script>
 	
-	<title>Fall 2022 Policies</title>
+	<title>Policies</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
 							href="https://courses.engr.illinois.edu/tam212">TAM 212</a>, <a
 							href="https://courses.engr.illinois.edu/tam251">TAM 251</a>.</p>
 
-					<p>Below are the course policies for the Fall 2022 TAM 2XX courses. Please read through them and familiarize
+					<p>Below are the course policies for the TAM 2XX courses. Please read through them and familiarize
 						yourself with the policies regarding course logistics.</p>
 
 					<!-- <p><a href="#Academic integrity">Academic integrity, harassment, and discrimination</a><br />
@@ -143,10 +143,10 @@
 						related to the CBTF are infractions in this course.</p>
 
 					<p>If you have accommodations identified by the Division of Rehabilitation-Education Services (DRES)
-						for exams, carefully go through and follow these instructions: 
-						<a href=https://cbtf.illinois.edu/students/dres">https://cbtf.illinois.edu/students/dres</a>. 
-						Please note, The CBTF cannot add DRES accommodations at the time of an exam. 
-						They MUST be uploaded 5 business days beforehand.</p>
+						for exams, please take your Letter of Accomodation (LOA) to the CBTF proctors in person before
+						you make your first exam reservation. The proctors will advise you as to whether the CBTF
+						provides your accommodations or whether you will need to make other arrangements with your
+						instructor.</p>
 
 					<p>Any problem with testing in the CBTF <strong>must</strong> be reported to CBTF staff at the time
 						the problem occurs. If you do not inform a proctor of a problem during the test then you
@@ -265,18 +265,16 @@
 
 					<h3><strong><a id="Quiz" name="Quiz"></a></strong><strong>Computer-based quizzes:</strong></h3>
 
-					<p>You will have quizzes using the PrairieLearn system. You<strong> will not be
+					<p>You will have online quizzes using the PrairieLearn system. You<strong> will not be
 							allowed </strong> to use notes, textbooks or electronic devices such as laptops or cell
 						phones. Solutions will not be posted. All quizzes will be held in the Computer-Based Testing
-						Facility (CBTF). Make sure to check the <a href="https://cbtf.engr.illinois.edu/">CBTF</a>
+						Facility (CBTF). Make sure to check the <a href="https://cbtf.engr.illinois.edu/"> CBTF</a>
 						website to get information about the facility and what you need to do to sign-up for your quiz.
-						<!-- 
 						Each quiz grade is determined from the following formula:</p>
 						<p>TAM 210/211/251: <strong>max([First Try, 1/3*(First Try) + 2/3*(Quiz Retry)]).</strong></p>
 						<p>TAM 212: <strong>0.9*max(First Try, Quiz Retry) + 0.1*min(First Try, Quiz Retry).</strong></p>
 					<p>If you have an excused absence for the quiz, then you will take the assessment at a later date,
 						or make other arrangements at the discretion of the instructor.</p>
-						-->
 
 					<!-- <p><strong><a id="Quiz review policy" name="Quiz review policy" style="background-size: 16px;">Quiz
 								review policy</a></strong></p>
@@ -296,7 +294,7 @@
 
 					<h3><strong><a id="Discussion" name="Discussion">Discussion sections</a>:</strong></h3>
 
-					<p>Discussion sections start in Week 1 of the semester. Prompt and regular
+					<p>Discussion sections start in Week 2 of semester. Prompt and regular
 						attendance at your discussion section is required. You <strong>must</strong> attend only the
 						discussion section in which you are enrolled. You will not receive a grade for the worksheet if
 						you attend the wrong discussion section.</p>
