--- a/pol/policies.html
+++ b/pol/policies.html
@@ -142,7 +142,7 @@
 
 					<p>If you have accommodations identified by the Division of Rehabilitation-Education Services (DRES)
 						for exams, carefully go through and follow these instructions: 
-						<a href=https://cbtf.illinois.edu/students/dres">https://cbtf.illinois.edu/students/dres</a>. 
+						<a href="https://cbtf.illinois.edu/students/dres">https://cbtf.illinois.edu/students/dres</a>. 
 						Please note, The CBTF cannot add DRES accommodations at the time of an exam. 
 						They MUST be uploaded 5 business days beforehand.</p>
 
